--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pillow==11.3.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 pypandoc==1.15
+python-dotenv==1.2.1
 pytz==2025.2
 six==1.17.0
 sniffio==1.3.1
